Listen to many endpoints

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,4 +10,10 @@
     label="Button B"
     endpoint="/b"
   ></app-loading-button>
+
+  <app-loading-button
+    (click)="getBoth()"
+    label="Button C"
+    [endpoints]="['/a', '/b']"
+  ></app-loading-button>
 </div>
